--- a/src/app/docs/architecture/page.mdx
+++ b/src/app/docs/architecture/page.mdx
@@ -1,7 +1,7 @@
 
 ## Architecture
 
-**Automate** the boring, elevate the wondrous. Our architecture embodies the same principles we apply to business automation — minimal complexity, maximum efficiency, and atomic reusability. Every component is designed to work independently while contributing to a cohesive ecosystem.
+**Automate** the boring. Architecture embodies the same principles we apply to business automation — minimal complexity, maximum efficiency, and atomic reusability. Every component is designed to work independently while contributing to a cohesive ecosystem.
 
 We don't just build software; we craft **automation solutions** that scale with your business. From single components to complete platforms, our architecture supports the journey from prototype to production.
 
