--- a/src/app/docs/page.mdx
+++ b/src/app/docs/page.mdx
@@ -1,6 +1,6 @@
 ## Introduction
 
-**Automate** the boring, elevate the wondrous. at Databayt we're building codebase for business automation, one atomic component at a time. Every line of code is open source, every contribution is valued, and every developer may shape the future of how businesses operate.
+**Automate** the boring. at Databayt we're building codebase for business automation, one atomic component at a time. Every line of code is open source, every contribution is valued, and every developer may shape the future of how businesses operate.
 
 We sell the origin of all value — we sell **Time**, the currency that drives the world — what if you could reclaim yours and focus on what truly matters?
 It's more than a service — it's an escape from the matrix.
