--- a/src/app/docs/upwork/page.mdx
+++ b/src/app/docs/upwork/page.mdx
@@ -155,9 +155,9 @@ Use this AI prompt template for automated proposal generation:
 
 ---
 
-## Professional Profile Setup
+## Profile Setup
 
-### Profile Optimization Checklist
+### Optimization Checklist
 
 #### Profile Photo
 
