--- a/src/app/docs/page.mdx
+++ b/src/app/docs/page.mdx
@@ -1,3 +1,5 @@
+import ActiveApps from "./apps"
+
 ## Introduction
 
 **Automate** the boring. at Databayt we're building codebase for business automation, one atomic component at a time. Every line of code is open source, every contribution is valued, and every developer may shape the future of how businesses operate.
@@ -60,6 +62,8 @@ We balance rapid innovation with long-term sustainability, ensuring our solution
 
 ### Excellence
 Every product we ship meets the highest standards of quality, security, and performance. Our reputation is built on reliable, enterprise-grade solutions.
+
+<ActiveApps />
 
 ## What You'll Find Here
 
