--- a/src/app/docs/page.mdx
+++ b/src/app/docs/page.mdx
@@ -73,9 +73,9 @@ Every product we ship meets the highest standards of quality, security, and perf
 ### For Developers
 
 * [Architecture](/docs/architecture) – System design and technical specs
-* [Patterns](/docs/development/patterns) – Best practices and coding standards
-* [Technical Records](/docs/development/technical-record) – Detailed technical documentation
-* [Contributing Guide](/docs/contributing) – How to get involved in development
+* [Stack](/docs/stack) – Technology used
+* [Pattern](/docs/pattern) – Best practices and coding standards
+* [Contributing Guide](/docs/contribute) – How to get involved in development
 
 ---
 
