--- a/src/app/docs/newcomers/page.mdx
+++ b/src/app/docs/newcomers/page.mdx
@@ -6,6 +6,17 @@ So you've heard about Databayt and you're curious. Maybe someone invited you to 
 
 This page is specifically for you - the newcomer who has questions, concerns, and wants to understand how this all works before diving in.
 
+### About Databayt
+
+Databayt is a collaborative open-source project focused on building high-quality, reusable UI components and templates. Our mission is to create a sustainable ecosystem where developers can earn while contributing to excellent UI components.
+
+#### Core Values
+- Open Source First - We believe in transparent, community-driven development
+- Quality Over Quantity - Every component meets high standards
+- Fair Revenue Sharing - Contributors earn from their work
+- Community-Driven - Your voice matters in our decisions
+- Continuous Learning - We grow together
+
 ### Remote Work
 
 **Yes, 100% remote.** There's no office, no required meetings, no fixed hours. Contributors work from their home offices in different countries, coffee shops while traveling, co-working spaces, or wherever they're most productive.
@@ -23,6 +34,12 @@ Most contributors earn $200-800/month after 6 months of consistent contribution.
 - Month 2-3: Component gets integrated into client projects
 - Month 4: Receive your first payment (usually $50-200)
 - Month 6+: Multiple components earning, income becomes more substantial
+
+#### Current Metrics
+- 1000+ GitHub stars
+- 100+ monthly active contributors
+- 50+ enterprise clients using our components
+- 200+ components in production
 
 ### Part-Time Contribution
 
@@ -43,6 +60,26 @@ Everyone starts somewhere. What matters most:
 - Persistence when facing challenges
 
 We provide mentorship and have "good first issue" labels specifically for newcomers.
+
+### Technology You'll Work With
+
+#### Frontend Stack
+- Next.js 14
+- React Server Components
+- TypeScript
+- Tailwind CSS
+- Radix UI
+- Framer Motion
+
+#### Development Tools
+- Turborepo
+- ESLint
+- Prettier
+- Jest
+- Playwright
+- Storybook
+
+Don't worry if you're not familiar with all these tools - you'll learn as you go!
 
 ### Getting Started
 
@@ -67,9 +104,9 @@ We provide mentorship and have "good first issue" labels specifically for newcom
 ### Support Available
 
 #### Community
-- Discord for real-time help
-- GitHub Discussions
-- Monthly community calls
+- Growing contributor base from 10+ countries
+- Active Discord community with 500+ members
+- Monthly community calls and workshops
 - Active mentorship program
 
 #### Resources
@@ -88,6 +125,15 @@ We have contributors at all skill levels. Beginners often bring fresh perspectiv
 
 #### How do I know what to work on?
 Start with issues labeled "good first issue", join community discussions, or talk to project maintainers. You're never working blindly.
+
+### Future Opportunities
+
+As you grow with us, you can look forward to:
+- Building enterprise solutions
+- Contributing to our design system framework
+- Helping create our developer education platform
+- Leading community programs
+- Mentoring new contributors
 
 ### Ready to Start?
 
