--- a/src/app/docs/pattern/page.mdx
+++ b/src/app/docs/pattern/page.mdx
@@ -1,4 +1,4 @@
-## Development Patterns
+## Patterns
 
 **Consistency** is the foundation of maintainable code. At Databayt, we follow established patterns that ensure our codebase remains scalable, readable, and collaborative. Every pattern serves a purpose — from atomic components to server actions, from naming conventions to file organization.
 
