--- a/src/app/docs/newcomers/page.mdx
+++ b/src/app/docs/newcomers/page.mdx
@@ -2,44 +2,58 @@ import { CustomVideoPlayer } from "@/components/ui/custom-video-player"
 
 ## Newcomers
 
+<div className="text-sm text-muted-foreground pt-4 bg-muted rounded-lg px-4 flex items-center">
+  <strong>Technology used:</strong> Next.js, React, TypeScript, Tailwind CSS... <a href="/docs/stack" className="underline hover:text-primary">see full stack →</a>
+</div>
+
 So you've heard about Databayt and you're curious. Maybe someone invited you to contribute, or you stumbled across our project and want to understand what we're all about. Either way, **welcome!**
 
 This page is specifically for you - the newcomer who has questions, concerns, and wants to understand how this all works before diving in.
 
-### About Databayt
+## Why Databayt
 
-Databayt is a collaborative open-source project focused on building high-quality, reusable UI components and templates. Our mission is to create a sustainable ecosystem where developers can earn while contributing to excellent UI components.
+Databayt is a collaborative open-source ecosystem designed to accelerate development. With a patterned, searchable code library, developers can start projects up to 70% complete—never from scratch. While open source has come a long way and countless codebases already exist, there's still real value in building a well-structured, indexed library where code follows consistent patterns and architecture. Databayt is about creating that shared standard—together. It's not just practical; it's exciting to shape a clean, reusable codebase as a community—making development faster for everyone, and driving collective progress for Databayt as a publicly traded entity.
 
-#### Core Values
-- Open Source First - We believe in transparent, community-driven development
-- Quality Over Quantity - Every component meets high standards
-- Fair Revenue Sharing - Contributors earn from their work
-- Community-Driven - Your voice matters in our decisions
-- Continuous Learning - We grow together
 
-### Remote Work
 
-**Yes, 100% remote.** There's no office, no required meetings, no fixed hours. Contributors work from their home offices in different countries, coffee shops while traveling, co-working spaces, or wherever they're most productive.
+<div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
+  <div className="p-6 border rounded-lg">
+    <h4 className="font-semibold mb-2">Generate Revenue</h4>
+    <div className="text-sm text-muted-foreground">
+      Build once, earn repeatedly through our transparent revenue-sharing model.
+    </div>
+  </div>
+  <div className="p-6 border rounded-lg">
+    <h4 className="font-semibold mb-2">Real-World Experience</h4>
+    <div className="text-sm text-muted-foreground">
+      Work on live, enterprise-grade projects solving actual business challenges.
+    </div>
+  </div>
+  <div className="p-6 border rounded-lg">
+    <h4 className="font-semibold mb-2">Public Ownership</h4>
+    <div className="text-sm text-muted-foreground">
+      Own and showcase your work while building a strong GitHub portfolio.
+    </div>
+  </div>
+  <div className="p-6 border rounded-lg">
+    <h4 className="font-semibold mb-2">Collaborative Learning</h4>
+    <div className="text-sm text-muted-foreground">
+      Learn from experts while working on enterprise solutions with our team.
+    </div>
+  </div>
+</div>
 
-You collaborate through GitHub, communicate async, and work on your own schedule.
+## Remote Work
 
-### Revenue Sharing
+**Yes, 100% remote.** There's no office, no required meetings, no fixed hours. Contributors work from their home offices in different countries, coffee shops while traveling, co-working spaces, or wherever they're most productive. You collaborate through GitHub, communicate async, and work on your own schedule.
 
-We use a transparent revenue-sharing model where contributors earn a percentage of revenue generated from components they build. Payments are made monthly via bank transfer, PayPal, or crypto.
+## Revenue Sharing
 
-Most contributors earn $200-800/month after 6 months of consistent contribution. Top contributors earn $2000+/month.
+No traditional salaries here. Databayt is collectively owned by us - the contributors. When sales team brings in projects, we complete them together and everyone takes their share. You're not an employee; you're a co-owner building equity in something bigger.
+We use a transparent revenue-sharing model where contributors earn a percentage of revenue generated from their contributions across our four core business models. [read more →](/docs/revenue)
 
-**Timeline Example:**
-- Month 1: Build your first component, learn the system
-- Month 2-3: Component gets integrated into client projects
-- Month 4: Receive your first payment (usually $50-200)
-- Month 6+: Multiple components earning, income becomes more substantial
 
-#### Current Metrics
-- 1000+ GitHub stars
-- 100+ monthly active contributors
-- 50+ enterprise clients using our components
-- 200+ components in production
+
 
 ### Part-Time Contribution
 
@@ -61,25 +75,9 @@ Everyone starts somewhere. What matters most:
 
 We provide mentorship and have "good first issue" labels specifically for newcomers.
 
-### Technology You'll Work With
 
-#### Frontend Stack
-- Next.js 14
-- React Server Components
-- TypeScript
-- Tailwind CSS
-- Radix UI
-- Framer Motion
 
-#### Development Tools
-- Turborepo
-- ESLint
-- Prettier
-- Jest
-- Playwright
-- Storybook
 
-Don't worry if you're not familiar with all these tools - you'll learn as you go!
 
 ### Getting Started
 
