--- a/src/app/docs/newcomers/page.mdx
+++ b/src/app/docs/newcomers/page.mdx
@@ -81,23 +81,32 @@ We provide mentorship and have "good first issue" labels specifically for newcom
 
 ### Getting Started
 
-#### Step 1: Look Around
-- Browse our GitHub repositories
-- Check "good first issue" labels
-- Read existing code
-- No commitment needed
-
-#### Step 2: Local Setup
-- Pick an interesting repository
-- Follow README setup
-- Run project locally
-- Try making small changes
-
-#### Step 3: First Contribution
-- Fix documentation
-- Add helpful comments
-- Update README
-- Submit your first PR
+<div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
+  <div className="p-6 border rounded-lg">
+    <h4 className="font-semibold mb-2">Explore</h4>
+    <div className="text-sm text-muted-foreground">
+      Browse our GitHub repositories to understand our architecture. Check issues labeled "good first issue" for beginner tasks. Read our documentation to learn our development practices.
+    </div>
+  </div>
+  <div className="p-6 border rounded-lg">
+    <h4 className="font-semibold mb-2">Setup</h4>
+    <div className="text-sm text-muted-foreground">
+      Pick a repository that matches your skills and interests. Follow our setup guide to configure your environment. Test the development server and start experimenting.
+    </div>
+  </div>
+  <div className="p-6 border rounded-lg">
+    <h4 className="font-semibold mb-2">Contribute</h4>
+    <div className="text-sm text-muted-foreground">
+      Start with small, manageable tasks to build confidence. Follow our contribution guidelines and coding standards. Get feedback from experienced contributors through PRs.
+    </div>
+  </div>
+  <div className="p-6 border rounded-lg">
+    <h4 className="font-semibold mb-2">Build</h4>
+    <div className="text-sm text-muted-foreground">
+      Leverage our battle-tested components for your projects. Start with up to 70% of your project pre-built. Customize and extend components to match your needs.
+    </div>
+  </div>
+</div>
 
 ### Support Available
 
@@ -137,6 +146,8 @@ As you grow with us, you can look forward to:
 
 Every contributor started exactly where you are now. You don't have to decide everything today. Just take one small step forward.
 
+
+**Join Discord:** Connect with our community on [Discord](https://discord.gg/uPa4gGG62c)
+
 **Questions?** Ask in our [discussions](https://github.com/databayt/community/discussions)
 
-**Ready to build?** Email us at [hello@databayt.org](mailto:hello@databayt.org)
