--- a/src/app/docs/revenue/page.mdx
+++ b/src/app/docs/revenue/page.mdx
@@ -19,7 +19,7 @@ Partnership opportunities for businesses seeking to outsource technology develop
 ### Codebase Revenue *(Our Highest Earner)*
 Our codebase executes the majority of tasks through accumulated, reusable components. Contributors who expand this foundation earn a share of the value it generates across all projects that use their components.
 
-**Your Earnings:** This is where the 40-70% project acceleration pays off. Every time your indexed components are reused in client projects, you earn. Build once, earn repeatedly. Top codebase contributors earn $2,000-5,000+ monthly from component reuse alone.
+**Your Earnings:** This is where the 40-70% project acceleration pays off. Every time your indexed components are reused in client projects, you earn. Build once, earn repeatedly. Top codebase contributors receive significant monthly earnings from component reuse alone.
 
 ### SaaS Revenue
 Ready-to-deploy software products sold to multiple organizations with similar needs. We act as a go-to central hub for businesses seeking automation solutions.
@@ -28,15 +28,15 @@ Ready-to-deploy software products sold to multiple organizations with similar ne
 
 ## Why This Model Works
 
-When the sales department brings in a $50,000 project:
+When a project comes in:
 - Sales team gets their share
 - Project contributors get their share  
 - Codebase contributors whose components are used get their share
 - Everyone wins when we succeed together
 
 **Expected Timeline:**
-- **Month 1-3:** Learn systems, contribute to projects, earn $200-800
-- **Month 6-12:** Build reusable components, participate in partnerships, earn $800-2,500  
-- **Year 2+:** Major codebase contributor with SaaS involvement, earn $2,500-8,000+
+- **Month 1-3:** Learn systems, contribute to projects, start earning initial revenue shares
+- **Month 6-12:** Build reusable components, participate in partnerships, increase your earnings
+- **Year 2+:** Major codebase contributor with SaaS involvement, potential for significant recurring revenue
 
 The more value you create for our collective ecosystem, the more you earn. It's that simple. 
