Remove contribute layout and related pages

--- a/src/app/docs/get-started/page.mdx
+++ b/src/app/docs/get-started/page.mdx
@@ -8,9 +8,30 @@ This guide will help you quickly set up your development environment and make yo
 
 ## Prerequisites
 
-Before you begin, make sure you have the following installed on your machine:
+Before you begin, make sure you have the following set up:
+
+<div className="p-6 border-l-4 border-orange-500 bg-orange-50 dark:bg-orange-950/20 my-6">
+  <h4 className="font-semibold mb-2">🔧 Complete Setup Guides</h4>
+  <p className="text-sm text-muted-foreground mb-2">
+    New to GitHub or local development? We have detailed visual guides to help you:
+  </p>
+  <div className="flex flex-wrap gap-2">
+    <a href="/docs/github" className="inline-flex items-center px-3 py-1 bg-primary/10 text-primary rounded-md text-sm hover:bg-primary/20 transition-colors">
+      📚 GitHub Setup Guide
+    </a>
+    <a href="/docs/localhost" className="inline-flex items-center px-3 py-1 bg-primary/10 text-primary rounded-md text-sm hover:bg-primary/20 transition-colors">
+      💻 Localhost Development Setup
+    </a>
+  </div>
+</div>
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
+  <div className="p-6 border rounded-lg">
+    <h4 className="font-semibold mb-2">GitHub Account</h4>
+    <div className="text-sm text-muted-foreground">
+      Free GitHub account with SSH keys configured. See our <a href="/docs/github" className="underline hover:text-primary">GitHub Setup Guide</a> for detailed instructions.
+    </div>
+  </div>
   <div className="p-6 border rounded-lg">
     <h4 className="font-semibold mb-2">Node.js 18+</h4>
     <div className="text-sm text-muted-foreground">
@@ -21,12 +42,6 @@ Before you begin, make sure you have the following installed on your machine:
     <h4 className="font-semibold mb-2">pnpm</h4>
     <div className="text-sm text-muted-foreground">
       Fast, disk space efficient package manager. Install with: <code className="bg-muted px-1 rounded">npm install -g pnpm</code>
-    </div>
-  </div>
-  <div className="p-6 border rounded-lg">
-    <h4 className="font-semibold mb-2">Git</h4>
-    <div className="text-sm text-muted-foreground">
-      Version control system. Download from <a href="https://git-scm.com" className="underline hover:text-primary" target="_blank">git-scm.com</a> or install via your OS package manager.
     </div>
   </div>
   <div className="p-6 border rounded-lg">
