--- a/src/app/docs/localhost/page.mdx
+++ b/src/app/docs/localhost/page.mdx
@@ -1,6 +1,6 @@
 import Image from "next/image"
 
-# Localhost Development Setup
+## Localhost
 
 A complete step-by-step guide to fork, clone, and run Databayt projects locally on your machine.
 
@@ -8,7 +8,7 @@ A complete step-by-step guide to fork, clone, and run Databayt projects locally 
   <strong>What you'll learn:</strong> Fork repository → Clone locally → Install dependencies → Run development server → Make your first contribution
 </div>
 
-## Step 1: Fork the Project
+### Step 1: Fork the Project
 
 Start by creating your own copy of the repository on GitHub.
 
@@ -25,7 +25,7 @@ Start by creating your own copy of the repository on GitHub.
   />
 </div>
 
-## Step 2: Create Your Fork
+### Step 2: Create Your Fork
 
 Ensure the repository name is available and create your fork.
 
@@ -43,7 +43,7 @@ Ensure the repository name is available and create your fork.
   />
 </div>
 
-## Step 3: Open VS Code/Cursor
+### Step 3: Open VS Code/Cursor
 
 Launch your preferred code editor and prepare to clone the repository.
 
@@ -61,7 +61,7 @@ Launch your preferred code editor and prepare to clone the repository.
   />
 </div>
 
-## Step 4: Clone from GitHub
+### Step 4: Clone from GitHub
 
 Get your forked repository URL and clone it locally.
 
@@ -80,7 +80,7 @@ Get your forked repository URL and clone it locally.
   />
 </div>
 
-## Step 5: Choose Local Directory
+### Step 5: Choose Local Directory
 
 Select where you want to store the project on your computer.
 
@@ -98,7 +98,7 @@ Select where you want to store the project on your computer.
   />
 </div>
 
-## Step 6: Open in Editor
+### Step 6: Open in Editor
 
 Open the cloned project in your code editor.
 
@@ -116,7 +116,7 @@ Open the cloned project in your code editor.
   />
 </div>
 
-## Step 7: Install Dependencies
+### Step 7: Install Dependencies
 
 Use pnpm to install all required dependencies.
 
@@ -139,7 +139,7 @@ pnpm install
   />
 </div>
 
-## Step 8: Set Up Environment
+### Step 8: Set Up Environment
 
 Configure your environment variables for local development.
 
@@ -161,7 +161,7 @@ cp .env.example .env.local
   />
 </div>
 
-## Step 9: Start Development Server
+### Step 9: Start Development Server
 
 Launch the development server and see your app running.
 
@@ -183,7 +183,7 @@ pnpm dev
   />
 </div>
 
-## Step 10: Verify Installation
+### Step 10: Verify Installation
 
 Confirm everything is working correctly.
 
@@ -205,19 +205,19 @@ Confirm everything is working correctly.
 
 Now that your local environment is set up, you're ready to contribute!
 
-### Create a Feature Branch
+#### Create a Feature Branch
 
 ```bash
 git checkout -b feature/your-feature-name
 ```
 
-### Make Your Changes
+#### Make Your Changes
 
 1. **Follow our coding patterns** - Check [/docs/pattern](/docs/pattern)
 2. **Use our components** - Browse `src/components/ui/` for reusable components
 3. **Test locally** - Ensure your changes work properly
 
-### Test Your Changes
+#### Test Your Changes
 
 ```bash
 # Build the project
@@ -230,7 +230,7 @@ pnpm lint
 pnpm type-check
 ```
 
-### Commit and Push
+#### Commit and Push
 
 ```bash
 # Stage your changes
@@ -243,7 +243,7 @@ git commit -m "feat: add new feature description"
 git push origin feature/your-feature-name
 ```
 
-### Create a Pull Request
+#### Create a Pull Request
 
 1. **Go to your fork** on GitHub
 2. **Click "Compare & pull request"**
@@ -273,7 +273,7 @@ git push origin feature/your-feature-name
 
 ## Troubleshooting
 
-### Common Issues
+#### Common Issues
 
 **Port already in use?**
 ```bash
