--- a/src/app/docs/get-started/page.mdx
+++ b/src/app/docs/get-started/page.mdx
@@ -59,7 +59,7 @@ Get up and running in 5 minutes:
 <div className="p-6 border-l-4 border-blue-500 bg-blue-50 dark:bg-blue-950/20 my-6">
   <h4 className="font-semibold mb-2">📋 Detailed Step-by-Step Guide</h4>
   <p className="text-sm text-muted-foreground">
-    For a comprehensive visual guide with screenshots, check out our <a href="/docs/localhost" className="underline hover:text-primary font-medium">Localhost Development Setup</a> page.
+    For a comprehensive visual guide with screenshots, check out our <a href="/docs/localhost" className="underline hover:text-primary font-medium">Localhost</a> page.
   </p>
 </div>
 
